--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-netlify": "^4.2.1",
+		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
@@ -26,6 +27,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bulma": "^1.0.1",
+		"sass": "^1.77.6",
 		"svelte-preprocess": "^6.0.1"
 	}
 }
